@@ -3,6 +3,7 @@
    2. Sailing Ships are now only as fast as their item's "ability" score. (1 means 1 move per tick, etc)
    3. Sailing Ships now properly count as Property for the purposes of certain spells and skills.
    4. Shipwright can retitle/redescribe sailing ship rooms now.
+   5. Improvement to context-usage when targeting items, mobs, or exits, e.g.: look item.3
 # Build 5.8.4 Released 12/01/2014
    *. Database Schema Updated for CMBKLG and CMCLIT.  See the Installation Guide about running DBUpgrade.
    1. Channels now save their back messages to the database for perpetual enjoyment. See DISABLE,CHANNELBACKLOG in coffeemud.ini.
